# reen

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DCI Primer.md  Dockerfile  README.md  SETUP.md  TempSpec.md  requirements.txt  runner.py  setup_venv.sh
agents/: agent_model_registry.gpt.yml  agent_model_registry.mistral.yml  agent_model_registry.qwen.yml  agent_model_registry.sonnet.yml  agent_model_registry.yml  agent_model_registry_old.yml  bootstrap_capability_registry.yml  coordinate_contract_level.yml  create_implementation.yml  create_implementation_brand.yml  create_implementation_context.yml  create_implementation_data.yml  create_implementation_projection.yml  create_plan.yml  create_specification_components.yml  create_specifications_brand.yml  create_specifications_context.yml  create_specifications_data.yml  create_specifications_external_api.yml  create_specifications_main.yml  create_specifications_projection.yml  create_specifications_visual_components.yml  create_test.yml  create_visual_specification.yml  create_visual_specifications_components.yml  expand_external_api_bundle.yml  fix_draft_blockers.yml  implementation_shared_static.inc.md  models.yml  resolve_compilation_errors.yml  resolve_interface_contract_context.yml  resolve_interface_contract_data.yml  resolve_interface_contract_projection.yml  review_draft_errors.yml  synthesize_contract_context.yml  synthesize_contract_data.yml  synthesize_contract_external_api.yml  synthesize_contract_projection.yml
contexts/: agent_runner.md  app.md  file_cache.md
docs/: AGENT_TYPES.md  DOCKER_WRAPPER.md  GITHUB_BACKEND.md  GIT_COMMIT_INCREMENTAL_PATCHING_SPEC.md  INCREMENTAL_BUILDS.md  RUST_MODULE_ORGANIZATION.md  SPECIFICATION_COMPLIANCE.md  TRACING_STANDARDS.md
draftsOld/: app.md
plans/: PLANNING_AND_SEMANTIC_REPAIR_PIPELINE.md
questions/: app.md
scripts/: reem.ps1  reem.sh  reen.ps1  reen.sh
specifications/: app.md
src/: agent_runner.rs  build_agent.rs  build_compile_agent.rs  build_tracker.rs  codegen.rs  compile_repair.rs  draft_parser.rs  (+8 more)
(+250 files in other folders)
