[package]
name = "reen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
yaml-rust = "0.4"
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde_yaml = "0.9.33"
dotenvy = "0.15.7"
html2text = "0.16.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "visit"] }

[lib]
path = "src/lib.rs"
