[package]
name = "reen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
dotenvy = "0.15"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
sha2 = "0.10"

[lib]
path = "src/lib.rs"
